fix: z-index on menus

--- a/src/index.sass
+++ b/src/index.sass
@@ -405,6 +405,8 @@ input[type="date"]::-webkit-calendar-picker-indicator
 
     padding: 24px 32px
     cursor: auto
+
+    z-index: 999
     
 
 
@@ -576,6 +578,8 @@ input[type=number]
     // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
     display: none
     margin-top: 10px
+
+    z-index: 999
   
     
     
